# encryption-decryption-app

./: .gitignore  .prettierignore  LICENSE  bun.lockb  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  encryptionMethods.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
update/: latest.json
