[package]
name = "encryption-decryption-app"
version = "1.4.0"
description = "A Tauri App"
authors = ["Jonas F. Franke <@binary-blazer"]
edition = "2021"

[lib]
name = "encryption_decryption_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

